{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 362,
  "lineage": "bc8f7834-5725-9813-17b0-42fcd25fd943",
  "resources": [
    {
      "module": "module.kubeoptima_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:security-group/sg-0b9496ab4f1aad3d2",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b9496ab4f1aad3d2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e89ebeb42d2d0ec4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "kubeoptima-test-cluster-2026071818471952330000000b",
            "name_prefix": "kubeoptima-test-cluster-",
            "owner_id": "320343233567",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-cluster",
              "Platform": "KubeOptima",
              "karpenter.sh/discovery": "kubeoptima-test"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-cluster",
              "Platform": "KubeOptima",
              "karpenter.sh/discovery": "kubeoptima-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:security-group/sg-0e89ebeb42d2d0ec4",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e89ebeb42d2d0ec4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9496ab4f1aad3d2"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9496ab4f1aad3d2"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9496ab4f1aad3d2"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9496ab4f1aad3d2"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9496ab4f1aad3d2"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b9496ab4f1aad3d2"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "kubeoptima-test-node-2026071818471968430000000c",
            "name_prefix": "kubeoptima-test-node-",
            "owner_id": "320343233567",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-node",
              "Platform": "KubeOptima",
              "karpenter.sh/discovery": "kubeoptima-test",
              "kubernetes.io/cluster/kubeoptima-test": "owned"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-node",
              "Platform": "KubeOptima",
              "karpenter.sh/discovery": "kubeoptima-test",
              "kubernetes.io/cluster/kubeoptima-test": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-434411347",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b9496ab4f1aad3d2",
            "security_group_rule_id": "sgr-0e3d51ef5c2e736b1",
            "self": false,
            "source_security_group_id": "sg-0e89ebeb42d2d0ec4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.eks.aws_security_group.cluster",
            "module.kubeoptima_eks.module.eks.aws_security_group.node",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4077163797",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e89ebeb42d2d0ec4",
            "security_group_rule_id": "sgr-0a4f01d129eb1fa67",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.eks.aws_security_group.cluster",
            "module.kubeoptima_eks.module.eks.aws_security_group.node",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1224888083",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e89ebeb42d2d0ec4",
            "security_group_rule_id": "sgr-001b6aefd93d34ddf",
            "self": false,
            "source_security_group_id": "sg-0b9496ab4f1aad3d2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.eks.aws_security_group.cluster",
            "module.kubeoptima_eks.module.eks.aws_security_group.node",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-568617844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e89ebeb42d2d0ec4",
            "security_group_rule_id": "sgr-04ed310dd183c991a",
            "self": false,
            "source_security_group_id": "sg-0b9496ab4f1aad3d2",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.eks.aws_security_group.cluster",
            "module.kubeoptima_eks.module.eks.aws_security_group.node",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3903196386",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e89ebeb42d2d0ec4",
            "security_group_rule_id": "sgr-0dd8e7b5e6aa4fbf8",
            "self": false,
            "source_security_group_id": "sg-0b9496ab4f1aad3d2",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.eks.aws_security_group.cluster",
            "module.kubeoptima_eks.module.eks.aws_security_group.node",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4227477699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e89ebeb42d2d0ec4",
            "security_group_rule_id": "sgr-027a0914559e46bec",
            "self": false,
            "source_security_group_id": "sg-0b9496ab4f1aad3d2",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.eks.aws_security_group.cluster",
            "module.kubeoptima_eks.module.eks.aws_security_group.node",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2673541896",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e89ebeb42d2d0ec4",
            "security_group_rule_id": "sgr-01ecd8e600aa0fbb6",
            "self": false,
            "source_security_group_id": "sg-0b9496ab4f1aad3d2",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.eks.aws_security_group.cluster",
            "module.kubeoptima_eks.module.eks.aws_security_group.node",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2352860589",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e89ebeb42d2d0ec4",
            "security_group_rule_id": "sgr-05e69ba96c0d6a953",
            "self": false,
            "source_security_group_id": "sg-0b9496ab4f1aad3d2",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.eks.aws_security_group.cluster",
            "module.kubeoptima_eks.module.eks.aws_security_group.node",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3454481582",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e89ebeb42d2d0ec4",
            "security_group_rule_id": "sgr-03e7eb7339a57b107",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.eks.aws_security_group.cluster",
            "module.kubeoptima_eks.module.eks.aws_security_group.node",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3421496904",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e89ebeb42d2d0ec4",
            "security_group_rule_id": "sgr-0ab428a6ff181675d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.eks.aws_security_group.cluster",
            "module.kubeoptima_eks.module.eks.aws_security_group.node",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1873823143",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0e89ebeb42d2d0ec4",
            "security_group_rule_id": "sgr-049cfea87099a8941",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.eks.aws_security_group.cluster",
            "module.kubeoptima_eks.module.eks.aws_security_group.node",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:network-acl/acl-049d105c724fa9c48",
            "default_network_acl_id": "acl-049d105c724fa9c48",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-049d105c724fa9c48",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "320343233567",
            "subnet_ids": [
              "subnet-015a8034446ae70d4",
              "subnet-02515e63788697811",
              "subnet-031a1e043957384cb",
              "subnet-03a46e0b1b986e6ae",
              "subnet-066057968666f25f7",
              "subnet-089052d6fb0dfb701"
            ],
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-default",
              "Platform": "KubeOptima"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-default",
              "Platform": "KubeOptima"
            },
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:route-table/rtb-064dcb20bbc3fbbd2",
            "default_route_table_id": "rtb-064dcb20bbc3fbbd2",
            "id": "rtb-064dcb20bbc3fbbd2",
            "owner_id": "320343233567",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-default",
              "Platform": "KubeOptima"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-default",
              "Platform": "KubeOptima"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:security-group/sg-0d308703c1bacb8cc",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d308703c1bacb8cc",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "320343233567",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-default",
              "Platform": "KubeOptima"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-default",
              "Platform": "KubeOptima"
            },
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012f6f45d947865ee",
            "arn": "arn:aws:ec2:ap-south-1:320343233567:elastic-ip/eipalloc-012f6f45d947865ee",
            "association_id": "eipassoc-0a9aaf6e2efb686cd",
            "domain": "vpc",
            "id": "eipalloc-012f6f45d947865ee",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a3dd753a315ba0a9",
            "private_dns": "ip-10-0-101-159.ap-south-1.compute.internal",
            "private_ip": "10.0.101.159",
            "public_dns": "ec2-15-206-177-243.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.177.243",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-ap-south-1a",
              "Platform": "KubeOptima"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-ap-south-1a",
              "Platform": "KubeOptima"
            },
            "vpc": true
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_internet_gateway.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:internet-gateway/igw-05f80ec96db9a726c",
            "id": "igw-05f80ec96db9a726c",
            "owner_id": "320343233567",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc",
              "Platform": "KubeOptima"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc",
              "Platform": "KubeOptima"
            },
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "dependencies": [
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012f6f45d947865ee",
            "association_id": "eipassoc-0a9aaf6e2efb686cd",
            "connectivity_type": "public",
            "id": "nat-0fd0f8da65d83dcb9",
            "network_interface_id": "eni-0a3dd753a315ba0a9",
            "private_ip": "10.0.101.159",
            "public_ip": "15.206.177.243",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-031a1e043957384cb",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-ap-south-1a",
              "Platform": "KubeOptima"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-ap-south-1a",
              "Platform": "KubeOptima"
            }
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_eip.nat",
            "module.kubeoptima_eks.module.vpc.aws_internet_gateway.this",
            "module.kubeoptima_eks.module.vpc.aws_subnet.public",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-072d4f6e03f1189ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fd0f8da65d83dcb9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-072d4f6e03f1189ee",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_eip.nat",
            "module.kubeoptima_eks.module.vpc.aws_internet_gateway.this",
            "module.kubeoptima_eks.module.vpc.aws_nat_gateway.this",
            "module.kubeoptima_eks.module.vpc.aws_route_table.private",
            "module.kubeoptima_eks.module.vpc.aws_subnet.public",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05f80ec96db9a726c",
            "id": "r-rtb-06332c65bbc25c7d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06332c65bbc25c7d6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_internet_gateway.this",
            "module.kubeoptima_eks.module.vpc.aws_route_table.public",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:route-table/rtb-072d4f6e03f1189ee",
            "id": "rtb-072d4f6e03f1189ee",
            "owner_id": "320343233567",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd0f8da65d83dcb9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-private",
              "Platform": "KubeOptima"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-private",
              "Platform": "KubeOptima"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:route-table/rtb-06332c65bbc25c7d6",
            "id": "rtb-06332c65bbc25c7d6",
            "owner_id": "320343233567",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f80ec96db9a726c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-public",
              "Platform": "KubeOptima"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-public",
              "Platform": "KubeOptima"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0277a505e3b99bcb9",
            "route_table_id": "rtb-072d4f6e03f1189ee",
            "subnet_id": "subnet-015a8034446ae70d4"
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_route_table.private",
            "module.kubeoptima_eks.module.vpc.aws_subnet.private",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4b28f7aa3a7f781",
            "route_table_id": "rtb-072d4f6e03f1189ee",
            "subnet_id": "subnet-03a46e0b1b986e6ae"
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_route_table.private",
            "module.kubeoptima_eks.module.vpc.aws_subnet.private",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05edc7200c163ccc6",
            "route_table_id": "rtb-072d4f6e03f1189ee",
            "subnet_id": "subnet-089052d6fb0dfb701"
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_route_table.private",
            "module.kubeoptima_eks.module.vpc.aws_subnet.private",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d90c25a0c9e0770",
            "route_table_id": "rtb-06332c65bbc25c7d6",
            "subnet_id": "subnet-031a1e043957384cb"
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_route_table.public",
            "module.kubeoptima_eks.module.vpc.aws_subnet.public",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c0344010413336d",
            "route_table_id": "rtb-06332c65bbc25c7d6",
            "subnet_id": "subnet-066057968666f25f7"
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_route_table.public",
            "module.kubeoptima_eks.module.vpc.aws_subnet.public",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b884534f92b2043a",
            "route_table_id": "rtb-06332c65bbc25c7d6",
            "subnet_id": "subnet-02515e63788697811"
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_route_table.public",
            "module.kubeoptima_eks.module.vpc.aws_subnet.public",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:subnet/subnet-015a8034446ae70d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015a8034446ae70d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320343233567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-private-ap-south-1a",
              "Platform": "KubeOptima",
              "karpenter.sh/discovery": "kubeoptima-test",
              "kubernetes.io/cluster/kubeoptima-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-private-ap-south-1a",
              "Platform": "KubeOptima",
              "karpenter.sh/discovery": "kubeoptima-test",
              "kubernetes.io/cluster/kubeoptima-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:subnet/subnet-03a46e0b1b986e6ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a46e0b1b986e6ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320343233567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-private-ap-south-1b",
              "Platform": "KubeOptima",
              "karpenter.sh/discovery": "kubeoptima-test",
              "kubernetes.io/cluster/kubeoptima-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-private-ap-south-1b",
              "Platform": "KubeOptima",
              "karpenter.sh/discovery": "kubeoptima-test",
              "kubernetes.io/cluster/kubeoptima-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:subnet/subnet-089052d6fb0dfb701",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089052d6fb0dfb701",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320343233567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-private-ap-south-1c",
              "Platform": "KubeOptima",
              "karpenter.sh/discovery": "kubeoptima-test",
              "kubernetes.io/cluster/kubeoptima-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-private-ap-south-1c",
              "Platform": "KubeOptima",
              "karpenter.sh/discovery": "kubeoptima-test",
              "kubernetes.io/cluster/kubeoptima-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:subnet/subnet-031a1e043957384cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031a1e043957384cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320343233567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-public-ap-south-1a",
              "Platform": "KubeOptima",
              "kubernetes.io/cluster/kubeoptima-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-public-ap-south-1a",
              "Platform": "KubeOptima",
              "kubernetes.io/cluster/kubeoptima-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:subnet/subnet-066057968666f25f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066057968666f25f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320343233567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-public-ap-south-1b",
              "Platform": "KubeOptima",
              "kubernetes.io/cluster/kubeoptima-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-public-ap-south-1b",
              "Platform": "KubeOptima",
              "kubernetes.io/cluster/kubeoptima-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:subnet/subnet-02515e63788697811",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02515e63788697811",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320343233567",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-public-ap-south-1c",
              "Platform": "KubeOptima",
              "kubernetes.io/cluster/kubeoptima-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc-public-ap-south-1c",
              "Platform": "KubeOptima",
              "kubernetes.io/cluster/kubeoptima-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ceedfa2776728ad6"
          },
          "dependencies": [
            "module.kubeoptima_eks.data.aws_availability_zones.available",
            "module.kubeoptima_eks.module.vpc.aws_vpc.this",
            "module.kubeoptima_eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.kubeoptima_eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320343233567:vpc/vpc-0ceedfa2776728ad6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049d105c724fa9c48",
            "default_route_table_id": "rtb-064dcb20bbc3fbbd2",
            "default_security_group_id": "sg-0d308703c1bacb8cc",
            "dhcp_options_id": "dopt-05d532565d577dcbf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ceedfa2776728ad6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064dcb20bbc3fbbd2",
            "owner_id": "320343233567",
            "tags": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc",
              "Platform": "KubeOptima"
            },
            "tags_all": {
              "Environment": "testing",
              "ManagedBy": "Terraform",
              "Name": "kubeoptima-test-vpc",
              "Platform": "KubeOptima"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}